upgrade  jwt
